Fixed preferences modals not being dark in dark mode.

--- a/Profile Folder/chrome/styles/partials/content/firefox/modal/_modal.scss
+++ b/Profile Folder/chrome/styles/partials/content/firefox/modal/_modal.scss
@@ -6,6 +6,11 @@
 
 	& {
 		--modal-background: rgb(251,251,251) !important;
+
+		@media (prefers-color-scheme: dark) {
+			--modal-background: rgb(29,29,29) !important;
+		}
+
 		--in-content-font-body-size-base: 9pt !important;
 	}
 
